# StaticObject

./: Cargo.toml  README.md
src/: lib.rs
static_object_derive/: Cargo.toml
static_object_derive/src/: lib.rs
